--- a/src/AstroPlanner/Pages/Stars.razor
+++ b/src/AstroPlanner/Pages/Stars.razor
@@ -1,5 +1,6 @@
 @page "/stars"
 @using AstroPlanner.Services
+@using AstroPlanner.Util.Services
 @inject HttpClient Http
 
 <PageTitle>Bright Stars</PageTitle>
