--- a/src/AstroPlanner/Pages/ObservePlan.razor
+++ b/src/AstroPlanner/Pages/ObservePlan.razor
@@ -60,9 +60,10 @@
 
 <div class="@(showSections ? "block-visible" : "block-hidden")">
     <FluentCard AreaRestricted="false">
-        <FluentSwitch @bind-Value=showSunInfo Label=" The Sun" />
-        <FluentSwitch @bind-Value=showMoonInfo Label=" The Moon" />
-        <FluentSwitch @bind-Value=showEclipseInfo Label=" Eclipses" />
+        <FluentSwitch @bind-Value=showSunInfo Label=" The Sun:" />
+        <FluentSwitch @bind-Value=showMoonInfo Label=" The Moon:" />
+        <FluentSwitch @bind-Value=showPlanetInfo Label=" Planets:" />
+        <FluentSwitch @bind-Value=showEclipseInfo Label=" Eclipses:" />
     </FluentCard>
 </div>
 
@@ -70,35 +71,37 @@
 {
     <br />
     <FluentCard id="observationPlan">
-        <h2>@PlanOptionsState.PlaceName - @PlanOptionsState.ObservationDate.ToDateOnly().ToLongDateString()</h2>
+        <h2>@PlanOptionsState.PlaceName - @PlanOptionsState.ObservationDate.ToDateOnly().ToLongDateString()
+            @(PlanOptionsState.ObservationTime is not null ?
+                    $"at {PlanOptionsState.ObservationTime.ToTimeOnly().ToShortTimeString()}" : "")</h2>
 
-        <div class="@(showSunInfo ? "block-visible" : "block-hidden")">
-            <FluentCard>
-                <FluentLabel Typo="Typography.H4">The Sun</FluentLabel>
-                <table class="table">
-                    <tbody>
-                        <tr>
-                            <td>Twilight (Astronomical / Nautical / Civil) begins:</td>
-                            <td>@SunInfo.AstronomicalTwilightBegins / @SunInfo.NauticalTwilightBegins /
-                                @SunInfo.CivilTwilightBegins</td>
-                        </tr>
-                        <tr>
-                            <td>Sunrise:</td>
-                            <td>@SunInfo.SunRise</td>
-                        </tr>
-                        <tr>
-                            <td>Sunset:</td>
-                            <td>@SunInfo.SunSet</td>
-                        </tr>
-                        <tr>
-                            <td>Twilight (Civil / Nautical / Astronomical) ends:</td>
-                            <td>@SunInfo.CivilTwilightEnds / @SunInfo.NauticalTwilightEnds /
-                                @SunInfo.AstronomicalTwilightEnds</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </FluentCard>
-        </div>
+    <div class="@(showSunInfo ? "block-visible" : "block-hidden")">
+        <FluentCard>
+            <FluentLabel Typo="Typography.H4">The Sun</FluentLabel>
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <td>Twilight (Astronomical / Nautical / Civil) begins:</td>
+                        <td>@SunInfo.AstronomicalTwilightBegins / @SunInfo.NauticalTwilightBegins /
+                            @SunInfo.CivilTwilightBegins</td>
+                    </tr>
+                    <tr>
+                        <td>Sunrise:</td>
+                        <td>@SunInfo.SunRise</td>
+                    </tr>
+                    <tr>
+                        <td>Sunset:</td>
+                        <td>@SunInfo.SunSet</td>
+                    </tr>
+                    <tr>
+                        <td>Twilight (Civil / Nautical / Astronomical) ends:</td>
+                        <td>@SunInfo.CivilTwilightEnds / @SunInfo.NauticalTwilightEnds /
+                            @SunInfo.AstronomicalTwilightEnds</td>
+                    </tr>
+                </tbody>
+            </table>
+        </FluentCard>
+    </div>
 
         <div class="@(showMoonInfo ? "block-visible" : "block-hidden")">
             <FluentCard>
@@ -119,6 +122,42 @@
                         </tr>
                     </tbody>
                 </table>
+            </FluentCard>
+        </div>
+
+        <div class="@(showPlanetInfo ? "block-visible" : "block-hidden")">
+            <FluentCard>
+                <FluentLabel Typo="Typography.H4">Planets</FluentLabel>
+            @if (PlanetInfo.PlanetDetails.Count > 0)
+                {
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Altitude</th>
+                                <th>Visible?</th>
+                                <th>Azimuth</th>
+                                <th>Magnitude</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var planetDetail in PlanetInfo.PlanetDetails)
+                            {
+                                <tr>
+                                    <td>@planetDetail.Name</td>
+                                    <td>@planetDetail.AltitudeDegree degree(s)</td>
+                                    <td>@(planetDetail.AltitudeDegree > 0 ? "Yes" : "No")</td>
+                                    <td>@planetDetail.AzimuthDegrees degree(s)</td>
+                                    <td>@planetDetail.Magnitude</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                }
+                else
+                {
+                    <p><i>Planet info not available. Have you specified an observation time?</i></p>
+                }
             </FluentCard>
         </div>
 
