--- a/src/AstroPlanner/_Imports.razor
+++ b/src/AstroPlanner/_Imports.razor
@@ -9,3 +9,4 @@
 @using AstroPlanner
 @using AstroPlanner.Layout
 @using Microsoft.FluentUI.AspNetCore.Components
+@using Icons = Microsoft.FluentUI.AspNetCore.Components.Icons
