--- a/src/AstroPlanner/Layout/NavMenu.razor
+++ b/src/AstroPlanner/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Bright Stars
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="dso">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Deep Sky Objects
+            </NavLink>
+        </div>
     </nav>
 </div>
 
